metadata/objects/Competitor__c.object
<CustomObject>
    <description>This object is a central hub to track all they key information about your competitors</description>
    <fields>
        <fullName>CEO__c</fullName>
        <description>Name of the CEO</description>
        <inlineHelpText>Name of the CEO</inlineHelpText>
        <label>CEO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Logo__c</fullName>
        <label>Competitor Logo</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitor_Weaknesses__c</fullName>
        <description>The Competitors Key Weaknesses</description>
        <inlineHelpText>The Competitors Key Weaknesses</inlineHelpText>
        <label>Competitor Weaknesses</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitor_next_steps__c</fullName>
        <label>Next Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <description>Number of Customers the Competitor has</description>
        <inlineHelpText>Number of Customers the Competitor has</inlineHelpText>
        <label># of Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Our_Advantages__c</fullName>
        <description>Our Product or Service Advantages Over the Competitor</description>
        <inlineHelpText>Our Product or Service Advantages Over the Competitor</inlineHelpText>
        <label>Our Advantages</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Selling_Tips__c</fullName>
        <description>Selling Tips against the Competitor</description>
        <inlineHelpText>Selling Tips against the Competitor</inlineHelpText>
        <label>Selling Tips</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ticker_Symbol__c</fullName>
        <description>Stock Ticker Symbol</description>
        <inlineHelpText>Stock Ticker Symbol</inlineHelpText>
        <label>Ticker Symbol</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <description>The Year the Company was Founded</description>
        <inlineHelpText>The Year the Company was Founded</inlineHelpText>
        <label>Year Founded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Competitor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Competitor_Weaknesses__c</columns>
        <columns>Our_Advantages__c</columns>
        <columns>Selling_Tips__c</columns>
        <columns>Competitor_next_steps__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>